// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`workers/pr/changelog getChangeLogJSON filters unnecessary warns 1`] = `
Object {
  "hasReleaseNotes": true,
  "project": Object {
    "apiBaseUrl": "https://api.github.com/",
    "baseUrl": "https://github.com/",
    "depName": "@renovate/no",
    "github": "chalk/chalk",
    "repository": "https://github.com/chalk/chalk",
  },
  "versions": Array [
    Object {
      "changes": Array [],
      "compare": Object {},
      "date": undefined,
      "releaseNotes": null,
      "version": "2.5.2",
    },
    Object {
      "changes": Array [],
      "compare": Object {},
      "date": "2017-12-24T03:20:46.238Z",
      "releaseNotes": null,
      "version": "2.4.2",
    },
    Object {
      "changes": Array [],
      "compare": Object {
        "url": "https://github.com/chalk/chalk/compare/npm_2.2.2...npm_2.3.0",
      },
      "date": "2017-10-24T03:20:46.238Z",
      "releaseNotes": Object {
        "url": "https://github.com/chalk/chalk/compare/npm_2.2.2...npm_2.3.0",
      },
      "version": "2.3.0",
    },
    Object {
      "changes": Array [],
      "compare": Object {
        "url": "https://github.com/chalk/chalk/compare/npm_1.0.0...npm_2.2.2",
      },
      "date": undefined,
      "releaseNotes": Object {
        "url": "https://github.com/chalk/chalk/compare/npm_1.0.0...npm_2.2.2",
      },
      "version": "2.2.2",
    },
  ],
}
`;

exports[`workers/pr/changelog getChangeLogJSON filters unnecessary warns 2`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate",
      "authorization": "token abc",
      "host": "api.github.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://api.github.com/repos/chalk/chalk/tags?per_page=100",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate",
      "authorization": "token abc",
      "host": "api.github.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://api.github.com/repos/chalk/chalk/contents/",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate",
      "authorization": "token abc",
      "host": "api.github.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://api.github.com/repos/chalk/chalk/releases?per_page=100",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate",
      "authorization": "token abc",
      "host": "api.github.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://api.github.com/repos/chalk/chalk/contents/",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate",
      "authorization": "token abc",
      "host": "api.github.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://api.github.com/repos/chalk/chalk/releases?per_page=100",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate",
      "authorization": "token abc",
      "host": "api.github.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://api.github.com/repos/chalk/chalk/contents/",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate",
      "authorization": "token abc",
      "host": "api.github.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://api.github.com/repos/chalk/chalk/releases?per_page=100",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate",
      "authorization": "token abc",
      "host": "api.github.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://api.github.com/repos/chalk/chalk/contents/",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate",
      "authorization": "token abc",
      "host": "api.github.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://api.github.com/repos/chalk/chalk/releases?per_page=100",
  },
]
`;

exports[`workers/pr/changelog getChangeLogJSON supports github enterprise and github enterprise changelog 1`] = `
Object {
  "hasReleaseNotes": true,
  "project": Object {
    "apiBaseUrl": "https://github-enterprise.example.com/",
    "baseUrl": "https://github-enterprise.example.com/",
    "depName": "renovate",
    "github": "chalk/chalk",
    "repository": "https://github-enterprise.example.com/chalk/chalk",
  },
  "versions": Array [
    Object {
      "changes": Array [],
      "compare": Object {},
      "date": undefined,
      "releaseNotes": null,
      "version": "2.5.2",
    },
    Object {
      "changes": Array [],
      "compare": Object {},
      "date": "2017-12-24T03:20:46.238Z",
      "releaseNotes": null,
      "version": "2.4.2",
    },
    Object {
      "changes": Array [],
      "compare": Object {
        "url": "https://github-enterprise.example.com/chalk/chalk/compare/npm_2.2.2...npm_2.3.0",
      },
      "date": "2017-10-24T03:20:46.238Z",
      "releaseNotes": Object {
        "url": "https://github-enterprise.example.com/chalk/chalk/compare/npm_2.2.2...npm_2.3.0",
      },
      "version": "2.3.0",
    },
    Object {
      "changes": Array [],
      "compare": Object {
        "url": "https://github-enterprise.example.com/chalk/chalk/compare/npm_1.0.0...npm_2.2.2",
      },
      "date": undefined,
      "releaseNotes": Object {
        "url": "https://github-enterprise.example.com/chalk/chalk/compare/npm_1.0.0...npm_2.2.2",
      },
      "version": "2.2.2",
    },
  ],
}
`;

exports[`workers/pr/changelog getChangeLogJSON supports github enterprise and github enterprise changelog 2`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate",
      "authorization": "token abc",
      "host": "github-enterprise.example.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://github-enterprise.example.com/repos/chalk/chalk/tags?per_page=100",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate",
      "authorization": "token abc",
      "host": "github-enterprise.example.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://github-enterprise.example.com/repos/chalk/chalk/contents/",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate",
      "authorization": "token abc",
      "host": "github-enterprise.example.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://github-enterprise.example.com/repos/chalk/chalk/releases?per_page=100",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate",
      "authorization": "token abc",
      "host": "github-enterprise.example.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://github-enterprise.example.com/repos/chalk/chalk/contents/",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate",
      "authorization": "token abc",
      "host": "github-enterprise.example.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://github-enterprise.example.com/repos/chalk/chalk/releases?per_page=100",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate",
      "authorization": "token abc",
      "host": "github-enterprise.example.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://github-enterprise.example.com/repos/chalk/chalk/contents/",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate",
      "authorization": "token abc",
      "host": "github-enterprise.example.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://github-enterprise.example.com/repos/chalk/chalk/releases?per_page=100",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate",
      "authorization": "token abc",
      "host": "github-enterprise.example.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://github-enterprise.example.com/repos/chalk/chalk/contents/",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate",
      "authorization": "token abc",
      "host": "github-enterprise.example.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://github-enterprise.example.com/repos/chalk/chalk/releases?per_page=100",
  },
]
`;

exports[`workers/pr/changelog getChangeLogJSON supports github enterprise and github.com changelog 1`] = `
Object {
  "hasReleaseNotes": true,
  "project": Object {
    "apiBaseUrl": "https://api.github.com/",
    "baseUrl": "https://github.com/",
    "depName": "renovate",
    "github": "chalk/chalk",
    "repository": "https://github.com/chalk/chalk",
  },
  "versions": Array [
    Object {
      "changes": Array [],
      "compare": Object {},
      "date": undefined,
      "releaseNotes": null,
      "version": "2.5.2",
    },
    Object {
      "changes": Array [],
      "compare": Object {},
      "date": "2017-12-24T03:20:46.238Z",
      "releaseNotes": null,
      "version": "2.4.2",
    },
    Object {
      "changes": Array [],
      "compare": Object {
        "url": "https://github.com/chalk/chalk/compare/npm_2.2.2...npm_2.3.0",
      },
      "date": "2017-10-24T03:20:46.238Z",
      "releaseNotes": Object {
        "url": "https://github.com/chalk/chalk/compare/npm_2.2.2...npm_2.3.0",
      },
      "version": "2.3.0",
    },
    Object {
      "changes": Array [],
      "compare": Object {
        "url": "https://github.com/chalk/chalk/compare/npm_1.0.0...npm_2.2.2",
      },
      "date": undefined,
      "releaseNotes": Object {
        "url": "https://github.com/chalk/chalk/compare/npm_1.0.0...npm_2.2.2",
      },
      "version": "2.2.2",
    },
  ],
}
`;

exports[`workers/pr/changelog getChangeLogJSON supports github enterprise and github.com changelog 2`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate",
      "authorization": "token abc",
      "host": "api.github.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://api.github.com/repos/chalk/chalk/tags?per_page=100",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate",
      "authorization": "token abc",
      "host": "api.github.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://api.github.com/repos/chalk/chalk/contents/",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate",
      "authorization": "token abc",
      "host": "api.github.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://api.github.com/repos/chalk/chalk/releases?per_page=100",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate",
      "authorization": "token abc",
      "host": "api.github.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://api.github.com/repos/chalk/chalk/contents/",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate",
      "authorization": "token abc",
      "host": "api.github.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://api.github.com/repos/chalk/chalk/releases?per_page=100",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate",
      "authorization": "token abc",
      "host": "api.github.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://api.github.com/repos/chalk/chalk/contents/",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate",
      "authorization": "token abc",
      "host": "api.github.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://api.github.com/repos/chalk/chalk/releases?per_page=100",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate",
      "authorization": "token abc",
      "host": "api.github.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://api.github.com/repos/chalk/chalk/contents/",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate",
      "authorization": "token abc",
      "host": "api.github.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://api.github.com/repos/chalk/chalk/releases?per_page=100",
  },
]
`;

exports[`workers/pr/changelog getChangeLogJSON supports github.com and github enterprise changelog 1`] = `
Object {
  "hasReleaseNotes": true,
  "project": Object {
    "apiBaseUrl": "https://github-enterprise.example.com/",
    "baseUrl": "https://github-enterprise.example.com/",
    "depName": "renovate",
    "github": "chalk/chalk",
    "repository": "https://github-enterprise.example.com/chalk/chalk",
  },
  "versions": Array [
    Object {
      "changes": Array [],
      "compare": Object {},
      "date": undefined,
      "releaseNotes": null,
      "version": "2.5.2",
    },
    Object {
      "changes": Array [],
      "compare": Object {},
      "date": "2017-12-24T03:20:46.238Z",
      "releaseNotes": null,
      "version": "2.4.2",
    },
    Object {
      "changes": Array [],
      "compare": Object {
        "url": "https://github-enterprise.example.com/chalk/chalk/compare/npm_2.2.2...npm_2.3.0",
      },
      "date": "2017-10-24T03:20:46.238Z",
      "releaseNotes": Object {
        "url": "https://github-enterprise.example.com/chalk/chalk/compare/npm_2.2.2...npm_2.3.0",
      },
      "version": "2.3.0",
    },
    Object {
      "changes": Array [],
      "compare": Object {
        "url": "https://github-enterprise.example.com/chalk/chalk/compare/npm_1.0.0...npm_2.2.2",
      },
      "date": undefined,
      "releaseNotes": Object {
        "url": "https://github-enterprise.example.com/chalk/chalk/compare/npm_1.0.0...npm_2.2.2",
      },
      "version": "2.2.2",
    },
  ],
}
`;

exports[`workers/pr/changelog getChangeLogJSON supports github.com and github enterprise changelog 2`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate",
      "authorization": "token abc",
      "host": "github-enterprise.example.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://github-enterprise.example.com/repos/chalk/chalk/tags?per_page=100",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate",
      "authorization": "token abc",
      "host": "github-enterprise.example.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://github-enterprise.example.com/repos/chalk/chalk/contents/",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate",
      "authorization": "token abc",
      "host": "github-enterprise.example.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://github-enterprise.example.com/repos/chalk/chalk/releases?per_page=100",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate",
      "authorization": "token abc",
      "host": "github-enterprise.example.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://github-enterprise.example.com/repos/chalk/chalk/contents/",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate",
      "authorization": "token abc",
      "host": "github-enterprise.example.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://github-enterprise.example.com/repos/chalk/chalk/releases?per_page=100",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate",
      "authorization": "token abc",
      "host": "github-enterprise.example.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://github-enterprise.example.com/repos/chalk/chalk/contents/",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate",
      "authorization": "token abc",
      "host": "github-enterprise.example.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://github-enterprise.example.com/repos/chalk/chalk/releases?per_page=100",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate",
      "authorization": "token abc",
      "host": "github-enterprise.example.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://github-enterprise.example.com/repos/chalk/chalk/contents/",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate",
      "authorization": "token abc",
      "host": "github-enterprise.example.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://github-enterprise.example.com/repos/chalk/chalk/releases?per_page=100",
  },
]
`;

exports[`workers/pr/changelog getChangeLogJSON supports node engines 1`] = `
Object {
  "hasReleaseNotes": true,
  "project": Object {
    "apiBaseUrl": "https://api.github.com/",
    "baseUrl": "https://github.com/",
    "depName": "renovate",
    "github": "chalk/chalk",
    "repository": "https://github.com/chalk/chalk",
  },
  "versions": Array [
    Object {
      "changes": Array [],
      "compare": Object {},
      "date": undefined,
      "releaseNotes": null,
      "version": "2.5.2",
    },
    Object {
      "changes": Array [],
      "compare": Object {},
      "date": "2017-12-24T03:20:46.238Z",
      "releaseNotes": null,
      "version": "2.4.2",
    },
    Object {
      "changes": Array [],
      "compare": Object {
        "url": "https://github.com/chalk/chalk/compare/npm_2.2.2...npm_2.3.0",
      },
      "date": "2017-10-24T03:20:46.238Z",
      "releaseNotes": Object {
        "url": "https://github.com/chalk/chalk/compare/npm_2.2.2...npm_2.3.0",
      },
      "version": "2.3.0",
    },
    Object {
      "changes": Array [],
      "compare": Object {
        "url": "https://github.com/chalk/chalk/compare/npm_1.0.0...npm_2.2.2",
      },
      "date": undefined,
      "releaseNotes": Object {
        "url": "https://github.com/chalk/chalk/compare/npm_1.0.0...npm_2.2.2",
      },
      "version": "2.2.2",
    },
  ],
}
`;

exports[`workers/pr/changelog getChangeLogJSON uses GitHub tags 1`] = `
Object {
  "hasReleaseNotes": true,
  "project": Object {
    "apiBaseUrl": "https://api.github.com/",
    "baseUrl": "https://github.com/",
    "depName": "renovate",
    "github": "chalk/chalk",
    "repository": "https://github.com/chalk/chalk",
  },
  "versions": Array [
    Object {
      "changes": Array [],
      "compare": Object {},
      "date": undefined,
      "releaseNotes": null,
      "version": "2.5.2",
    },
    Object {
      "changes": Array [],
      "compare": Object {
        "url": "https://github.com/chalk/chalk/compare/v2.3.0...v2.4.2",
      },
      "date": "2017-12-24T03:20:46.238Z",
      "releaseNotes": Object {
        "url": "https://github.com/chalk/chalk/compare/v2.3.0...v2.4.2",
      },
      "version": "2.4.2",
    },
    Object {
      "changes": Array [],
      "compare": Object {
        "url": "https://github.com/chalk/chalk/compare/2.2.2...v2.3.0",
      },
      "date": "2017-10-24T03:20:46.238Z",
      "releaseNotes": Object {
        "url": "https://github.com/chalk/chalk/compare/2.2.2...v2.3.0",
      },
      "version": "2.3.0",
    },
    Object {
      "changes": Array [],
      "compare": Object {
        "url": "https://github.com/chalk/chalk/compare/1.0.0...2.2.2",
      },
      "date": undefined,
      "releaseNotes": Object {
        "url": "https://github.com/chalk/chalk/compare/1.0.0...2.2.2",
      },
      "version": "2.2.2",
    },
  ],
}
`;

exports[`workers/pr/changelog getChangeLogJSON uses GitHub tags 2`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate",
      "authorization": "token abc",
      "host": "api.github.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://api.github.com/repos/chalk/chalk/tags?per_page=100",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate",
      "authorization": "token abc",
      "host": "api.github.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://api.github.com/repos/chalk/chalk/contents/",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate",
      "authorization": "token abc",
      "host": "api.github.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://api.github.com/repos/chalk/chalk/releases?per_page=100",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate",
      "authorization": "token abc",
      "host": "api.github.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://api.github.com/repos/chalk/chalk/contents/",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate",
      "authorization": "token abc",
      "host": "api.github.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://api.github.com/repos/chalk/chalk/releases?per_page=100",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate",
      "authorization": "token abc",
      "host": "api.github.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://api.github.com/repos/chalk/chalk/contents/",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate",
      "authorization": "token abc",
      "host": "api.github.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://api.github.com/repos/chalk/chalk/releases?per_page=100",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate",
      "authorization": "token abc",
      "host": "api.github.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://api.github.com/repos/chalk/chalk/contents/",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate",
      "authorization": "token abc",
      "host": "api.github.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://api.github.com/repos/chalk/chalk/releases?per_page=100",
  },
]
`;

exports[`workers/pr/changelog getChangeLogJSON works without Github 1`] = `
Object {
  "hasReleaseNotes": true,
  "project": Object {
    "apiBaseUrl": "https://api.github.com/",
    "baseUrl": "https://github.com/",
    "depName": "renovate",
    "github": "chalk/chalk",
    "repository": "https://github.com/chalk/chalk",
  },
  "versions": Array [
    Object {
      "changes": Array [],
      "compare": Object {},
      "date": undefined,
      "releaseNotes": null,
      "version": "2.5.2",
    },
    Object {
      "changes": Array [],
      "compare": Object {},
      "date": "2017-12-24T03:20:46.238Z",
      "releaseNotes": null,
      "version": "2.4.2",
    },
    Object {
      "changes": Array [],
      "compare": Object {
        "url": "https://github.com/chalk/chalk/compare/npm_2.2.2...npm_2.3.0",
      },
      "date": "2017-10-24T03:20:46.238Z",
      "releaseNotes": Object {
        "url": "https://github.com/chalk/chalk/compare/npm_2.2.2...npm_2.3.0",
      },
      "version": "2.3.0",
    },
    Object {
      "changes": Array [],
      "compare": Object {
        "url": "https://github.com/chalk/chalk/compare/npm_1.0.0...npm_2.2.2",
      },
      "date": undefined,
      "releaseNotes": Object {
        "url": "https://github.com/chalk/chalk/compare/npm_1.0.0...npm_2.2.2",
      },
      "version": "2.2.2",
    },
  ],
}
`;
